--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "react-boilerplate",
-  "version": "3.3.3",
-  "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "name": "affirmation",
+  "version": "1.0",
+  "description": "Connects expert software engineers with budding software engineers fostering candid advice and affirmation",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mxstbr/react-boilerplate.git"
+    "url": "git://github.com/HRR20-Lotus/affirmation.git"
   },
   "engines": {
     "npm": ">=3"
   },
-  "author": "Max Stoiber",
-  "license": "MIT",
+  "author": "Lotus",
+  "license": "",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
     "preanalyze": "npm run analyze:clean",
@@ -194,6 +194,7 @@
     "ip": "1.1.3",
     "lodash": "4.16.4",
     "minimist": "1.2.0",
+    "pg": "^6.1.2",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "react-helmet": "3.1.0",
@@ -207,6 +208,7 @@
     "redux-saga": "0.12.0",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
+    "sequelize": "^3.28.0",
     "styled-components": "1.0.3",
     "warning": "3.0.0",
     "whatwg-fetch": "1.0.0"
