--- a/package.json
+++ b/package.json
@@ -186,15 +186,18 @@
     "body-parser": "^1.15.2",
     "chalk": "1.1.3",
     "compression": "1.6.2",
+    "cors": "^2.8.1",
     "cross-env": "3.1.3",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.5",
     "immutable": "3.8.1",
+    "install": "^0.8.4",
     "intl": "1.2.5",
     "invariant": "2.2.1",
     "ip": "1.1.3",
     "lodash": "4.16.4",
     "minimist": "1.2.0",
+    "npm": "^4.0.5",
     "pg": "^6.1.2",
     "react": "15.3.2",
     "react-dom": "15.3.2",
@@ -207,6 +210,7 @@
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
+    "request": "^2.79.0",
     "reselect": "2.5.4",
     "sanitize.css": "4.1.0",
     "sequelize": "^3.28.0",
