--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "invariant": "2.2.1",
     "ip": "1.1.3",
     "lodash": "4.16.4",
+    "material-ui": "^0.16.6",
     "minimist": "1.2.0",
     "npm": "^4.0.5",
     "pg": "^6.1.2",
@@ -207,6 +208,7 @@
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.3.3",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
