--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "react-router-scroll": "0.3.3",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "3.6.0",
+    "redux-form": "^6.4.2",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.12.0",
     "request": "^2.79.0",
